--- a/app/src/main/res/layout/activity_notification_overlay.xml
+++ b/app/src/main/res/layout/activity_notification_overlay.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -11,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center"
-        android:padding="@dimen/dp50"
+        android:padding="@dimen/dp32"
         android:textSize="25sp" />
 
     <LinearLayout
@@ -66,21 +67,58 @@
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp16"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            style="@style/AppTheme.Title"
+        <LinearLayout
+            android:id="@+id/btn_wrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/order_items" />
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/dp16"
+            android:weightSum="2"
+            android:layout_alignParentBottom="true">
 
-        <android.support.v7.widget.RecyclerView
+            <Button
+                android:id="@+id/btn_accept"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/button_transparent"
+                android:text="@string/lbl_accept" />
+
+            <Button
+                android:id="@+id/btn_reject"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dp5"
+                android:layout_weight="1"
+                android:background="@drawable/button_transparent"
+                android:text="@string/lbl_reject" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_above="@id/btn_wrapper"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp16"
+            android:orientation="vertical"
+            android:layout_alignParentStart="true">
 
+            <TextView
+                style="@style/AppTheme.Title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/order_items" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/notification_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="200dp" />
+
+        </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
