200 response for get, 201 for post.

--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -32,7 +32,8 @@
                 android:drawablePadding="@dimen/dp10"
                 android:imeOptions="actionNext"
                 android:maxLines="1"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:inputType="textPassword"/>
 
         </android.support.design.widget.TextInputLayout>
 
@@ -49,7 +50,8 @@
                 android:drawablePadding="@dimen/dp10"
                 android:imeOptions="actionNext"
                 android:maxLines="1"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:inputType="textPassword"/>
 
         </android.support.design.widget.TextInputLayout>
 
@@ -66,7 +68,8 @@
                 android:drawablePadding="@dimen/dp10"
                 android:imeOptions="actionNext"
                 android:maxLines="1"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:inputType="textPassword"/>
 
         </android.support.design.widget.TextInputLayout>
 
