--- a/app/src/main/res/drawable-xxhdpi/flower_image_frame.xml
+++ b/app/src/main/res/drawable-xxhdpi/flower_image_frame.xml
@@ -8,7 +8,7 @@
 
     <!-- Border color and thickness -->
     <stroke
-        android:width="1dp"
-        android:color="@color/colorPrimary" />
+        android:width="2dp"
+        android:color="@color/colorWhite" />
 
 </shape>
