--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_background">
+    android:background="@drawable/ic_background"
+    android:fadeScrollbars="false"
+    android:padding="@dimen/dp16">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,18 +23,16 @@
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp16"
             android:hint="@string/lbl_old_password">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/edit_text_old_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_person_outline_white_24dp"
+                android:drawableStart="@drawable/ic_key_white_24dp"
                 android:drawablePadding="@dimen/dp10"
                 android:imeOptions="actionNext"
                 android:maxLines="1"
-                android:singleLine="true"
                 android:inputType="textPassword"/>
 
         </android.support.design.widget.TextInputLayout>
@@ -46,11 +46,10 @@
                 android:id="@+id/edit_text_new_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_person_outline_white_24dp"
+                android:drawableStart="@drawable/ic_key_white_24dp"
                 android:drawablePadding="@dimen/dp10"
                 android:imeOptions="actionNext"
                 android:maxLines="1"
-                android:singleLine="true"
                 android:inputType="textPassword"/>
 
         </android.support.design.widget.TextInputLayout>
@@ -64,11 +63,10 @@
                 android:id="@+id/edit_text_confirm_new_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_person_outline_white_24dp"
+                android:drawableStart="@drawable/ic_key_white_24dp"
                 android:drawablePadding="@dimen/dp10"
-                android:imeOptions="actionNext"
+                android:imeOptions="actionDone"
                 android:maxLines="1"
-                android:singleLine="true"
                 android:inputType="textPassword"/>
 
         </android.support.design.widget.TextInputLayout>
@@ -82,4 +80,4 @@
             android:text="@string/lbl_reset_password" />
 
     </LinearLayout>
-</LinearLayout>
+</ScrollView>
