--- a/app/src/main/res/layout/fragment_shop_pictures.xml
+++ b/app/src/main/res/layout/fragment_shop_pictures.xml
@@ -3,22 +3,13 @@
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <Button
-        android:id="@+id/btn_upload_new"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button_transparent"
-        android:text="@string/btn_upload_new"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="@dimen/dp16"/>
+    android:orientation="vertical"
+    android:background="@drawable/ic_background">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/btn_upload_new"
         android:layout_margin="@dimen/dp16">
 
         <android.support.v7.widget.RecyclerView
