--- a/app/src/main/res/layout/layout_register_header.xml
+++ b/app/src/main/res/layout/layout_register_header.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_pinterest" />
+        android:layout_height="@dimen/dp100"
+        android:src="@drawable/flower_central_logo" />
 
     <TextView
         style="@style/AppTheme.Title"
