--- a/app/src/main/res/layout/shop_pictures_item_row.xml
+++ b/app/src/main/res/layout/shop_pictures_item_row.xml
@@ -10,7 +10,21 @@
         android:id="@+id/image_view_shop_picture"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:scaleType="fitXY" />
+        android:scaleType="fitXY"
+        android:background="@drawable/flower_image_frame"
+        android:padding="@dimen/dp2"/>
+
+    <TextView
+        android:id="@+id/text_view_picture_upload"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:scaleType="fitXY"
+        android:text="@string/btn_upload_pictures"
+        android:gravity="center"
+        android:background="@drawable/flower_image_frame"
+        android:visibility="gone"
+        android:textStyle="bold"
+        android:textColor="@color/colorWhite"/>
 
     <TextView
         android:id="@+id/text_view_remove"
@@ -18,6 +32,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="@dimen/dp5"
-        android:text="@string/lbl_remove" />
+        android:text="@string/lbl_remove"
+        android:textColor="@color/colorWhite" />
 
 </LinearLayout>
