--- a/app/src/main/res/menu/menu_nav_drawer_left.xml
+++ b/app/src/main/res/menu/menu_nav_drawer_left.xml
@@ -3,28 +3,28 @@
 
     <item
         android:id="@+id/nav_item_order"
-        android:icon="@drawable/ic_menu_manage"
+        android:icon="@drawable/ic_order_24dp"
         android:title="@string/nav_item_order" />
     <item
         android:id="@+id/nav_item_sales_dashboard"
-        android:icon="@drawable/ic_menu_manage"
+        android:icon="@drawable/ic_dashboard_white_24dp"
         android:title="@string/nav_item_sales_dashboard" />
     <item
         android:id="@+id/nav_item_profile"
-        android:icon="@drawable/ic_menu_manage"
+        android:icon="@drawable/ic_person_outline_white_24dp"
         android:title="@string/nav_item_profile" />
     <item
         android:id="@+id/nav_item_feedback"
-        android:icon="@drawable/ic_menu_manage"
+        android:icon="@drawable/ic_feedback_white_24dp"
         android:title="@string/nav_item_feedback" />
 
     <item
         android:id="@+id/nav_item_logout"
-        android:icon="@drawable/ic_menu_manage"
+        android:icon="@drawable/ic_logout_white_24dp"
         android:title="@string/nav_item_logout" />
     <item
         android:id="@+id/nav_item_help"
-        android:icon="@drawable/ic_menu_manage"
+        android:icon="@drawable/ic_help_outline_white_24dp"
         android:title="@string/nav_item_help" />
 
 </menu>
