--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -53,8 +53,8 @@
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/dp100"
-                android:src="@drawable/flower_central_logo"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/flower_central_vendor_logo"
                 android:scaleType="fitCenter"/>
 
             <TextView
