--- a/app/src/main/res/layout/fragment_shop_pictures.xml
+++ b/app/src/main/res/layout/fragment_shop_pictures.xml
@@ -6,11 +6,24 @@
     android:orientation="vertical"
     android:background="@drawable/ic_background">
 
+    <ImageView
+        android:id="@+id/image_view_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/ic_delete_white_24dp"
+        android:layout_marginEnd="@dimen/dp16"
+        android:layout_marginTop="@dimen/dp16"
+        android:visibility="gone"/>
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/dp16">
+        android:layout_marginStart="@dimen/dp16"
+        android:layout_marginEnd="@dimen/dp16"
+        android:layout_marginTop="@dimen/dp5"
+        android:layout_below="@id/image_view_delete">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/shop_pictures_recycler_view"
