--- a/app/src/main/res/layout/shop_pictures_item_row.xml
+++ b/app/src/main/res/layout/shop_pictures_item_row.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/dp16"
-    android:orientation="vertical"
     android:padding="@dimen/dp5">
 
     <ImageView
@@ -13,6 +12,15 @@
         android:scaleType="fitXY"
         android:background="@drawable/flower_image_frame"
         android:padding="@dimen/dp2"/>
+
+    <ImageView
+        android:id="@+id/image_view_selected"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|top"
+        android:src="@drawable/ic_check_24dp"
+        android:layout_margin="@dimen/dp2"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/text_view_picture_upload"
@@ -26,13 +34,4 @@
         android:textStyle="bold"
         android:textColor="@color/colorWhite"/>
 
-    <TextView
-        android:id="@+id/text_view_remove"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="@dimen/dp5"
-        android:text="@string/lbl_remove"
-        android:textColor="@color/colorWhite" />
-
-</LinearLayout>
+</FrameLayout>
