--- a/app/src/main/res/layout/layout_content_home.xml
+++ b/app/src/main/res/layout/layout_content_home.xml
@@ -6,19 +6,7 @@
     android:layout_height="wrap_content"
     tools:context="com.flowercentral.flowercentralbusiness.dashboard.DashboardActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
+    <include layout="@layout/layout_app_toolbar" />
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -26,6 +14,7 @@
         android:id="@+id/nav_content_wrapper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="?actionBarSize"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="com.flowercentral.flowercentralbusiness.dashboard.DashboardActivity"
         tools:showIn="@layout/layout_app_toolbar">
