--- a/app/src/main/res/menu/menu_nav_drawer_left.xml
+++ b/app/src/main/res/menu/menu_nav_drawer_left.xml
@@ -11,7 +11,7 @@
         android:title="@string/nav_item_sales_dashboard" />
     <item
         android:id="@+id/nav_item_profile"
-        android:icon="@drawable/ic_person_outline_white_24dp"
+        android:icon="@drawable/ic_store_white"
         android:title="@string/nav_item_profile" />
     <item
         android:id="@+id/nav_item_feedback"
