--- a/app/src/main/res/menu/menu_nav_drawer_left.xml
+++ b/app/src/main/res/menu/menu_nav_drawer_left.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/nav_item_order"
-        android:icon="@drawable/ic_order_24dp"
+        android:icon="@drawable/ic_order"
         android:title="@string/nav_item_order" />
     <item
         android:id="@+id/nav_item_sales_dashboard"
@@ -11,7 +11,7 @@
         android:title="@string/nav_item_sales_dashboard" />
     <item
         android:id="@+id/nav_item_profile"
-        android:icon="@drawable/ic_store_white"
+        android:icon="@drawable/ic_store_nav"
         android:title="@string/nav_item_profile" />
     <item
         android:id="@+id/nav_item_feedback"
@@ -20,11 +20,11 @@
 
     <item
         android:id="@+id/nav_item_logout"
-        android:icon="@drawable/ic_logout_white_24dp"
+        android:icon="@drawable/ic_logout"
         android:title="@string/nav_item_logout" />
     <item
         android:id="@+id/nav_item_help"
-        android:icon="@drawable/ic_help_outline_white_24dp"
+        android:icon="@drawable/ic_help"
         android:title="@string/nav_item_help" />
 
 </menu>
